Search real places and insert them by route and time constraints
